# godot-rust-codegen

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: build-and-test.yaml
example/: .gitignore  Cargo.toml  build.rs  project.godot  rust.gdextension
example/gd/scenes/: LevelOne.tscn  Main.tscn
example/gd/scenes/multiplayer/: Main.tscn
example/src/: GameRecorder.rs  Menu.rs  main.rs
src/: gdextension.rs  icon_comment.rs  input_actions.rs  layers.rs  lib.rs  mod_file.rs  projectgodot.rs  scenes.rs  utils.rs
