[package]
name = "zgrcg"
version = "0.1.0"
edition = "2024"

[features]
default = ["input_actions", "layers"]
input_actions = []
layers = []

[dependencies]
regex = "1.11.1"
lazy_static = "1.5.0"
walkdir = "2.5.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
