[package]
edition = "2024"
name = "zgrcg"
version = "0.1.0"

[features]
default = ["input_actions", "layers"]
input_actions = []
layers = []

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.5.0"
